--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,12 @@
 
 #nedcmenu ul ul {
     display: none;
-    margin: 5px;
+    padding: 5px;
+    border-top: 1px solid #e3e3e3;
+    margin: 0;
+    background: #fff;
+    border-left: 1px solid #e3e3e3;
+    border-right: 1px solid #e3e3e3;
 }
 
 #nedcmenu ul ul.active{
@@ -134,4 +139,7 @@
 li.root {
     font-size: 18px !important;
     padding: 3px !important;
+}
+#nedcmenu li.has-sub {
+    border-bottom: 1px solid #d8d6d6;
 }
