Fix not able to click on block controls when editing.

--- a/styles_boost.css
+++ b/styles_boost.css
@@ -21,3 +21,8 @@
 #nedcmenu ul ul.active {
     padding: 0;
 }
+
+.block_ned_custom_menu .block-controls {
+    float: none !important;
+    text-align: right;
+}
