--- a/styles_boost.css
+++ b/styles_boost.css
@@ -1,7 +1,3 @@
-#nedcmenu {
-    margin: 0 -22px;
-}
-
 #nedcmenu>ul>li>div>div {
     padding: 5px 5px 5px 16px;
 }
@@ -18,8 +14,17 @@
     background: #fff !important;
 }
 
+#nedcmenu ul ul {
+    border-left: 1px solid rgba(238,238,238,1);
+    border-right: 1px solid rgba(238,238,238,1);
+}
+
 #nedcmenu ul ul.active {
     padding: 0;
+}
+
+.block_ned_custom_menu {
+    padding: 0 !important;
 }
 
 .block_ned_custom_menu .block-controls {
